# hwFrame

./: .gitmodules  CMakeLists.txt  Events.h  FrameDecoderSm.h  FrameEncoderSm.h  FrameSpecification.h  README.md  SmStorage.h  main.cpp
Framer/: CMakeLists.txt  Events.h  FrameSpecification.h  Framer.cpp  Framer.hpp  SmStorage.h
Session/: CMakeLists.txt  Session.hpp
State Diagrams/: DecoderStateMachine.plantuml  EncoderStateMachine.plantuml
